{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 93,
  "lineage": "c027c734-99ad-9e18-4022-0e553ce0feb5",
  "resources": [
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-041411c33531ae647",
            "domain": "vpc",
            "id": "eipalloc-0d04382097a4cf5aa",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02ed40ce5f5ecc5ce",
            "private_dns": "ip-10-1-96-20.us-east-2.compute.internal",
            "private_ip": "10.1.96.20",
            "public_dns": "ec2-3-140-76-173.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.76.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic-appgate"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.appate-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-page",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b614a5d911900a9b",
            "arn": "arn:aws:ec2:us-east-2:441304528954:instance/i-0857499d15a78ad7b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "disk-2"
                },
                "throughput": 0,
                "volume_id": "vol-0522cbd07d42ccf65",
                "volume_size": 10,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "disk-1"
                },
                "throughput": 0,
                "volume_id": "vol-0a9abc890a17d1e55",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0857499d15a78ad7b",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-appgate",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d0168b169e0f67a",
            "private_dns": "ip-10-1-96-88.us-east-2.compute.internal",
            "private_ip": "10.1.96.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5a6a4a58c8eed83",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c979f2ad5c7b381",
            "tags": {
              "Name": "appgate-instance-webpage"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08897d44ba2ecffbd"
            ]
          },
          "dependencies": [
            "module.appate-ec2.aws_key_pair.deployer-appgate",
            "module.appgate-network.aws_subnet.private-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.appate-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b614a5d911900a9b",
            "arn": "arn:aws:ec2:us-east-2:441304528954:instance/i-05694363d117229a2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05694363d117229a2",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-appgate",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2eaeb20e1d863c7",
            "private_dns": "ip-10-1-96-158.us-east-2.compute.internal",
            "private_ip": "10.1.96.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ade11d8a8c89b609",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-035df656938b57f93"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e22a963d88061a6",
            "tags": {
              "Name": "appgate-instance-web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035df656938b57f93"
            ]
          },
          "dependencies": [
            "module.appate-ec2.aws_key_pair.deployer-appgate",
            "module.appate-ec2.aws_security_group.sg-instance",
            "module.appgate-network.aws_subnet.private-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:internet-gateway/igw-027179fe573b1d455",
            "id": "igw-027179fe573b1d455",
            "owner_id": "441304528954",
            "tags": {
              "Name": "igw-vpc"
            },
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-appgate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d04382097a4cf5aa",
            "id": "nat-0e54586db0896779d",
            "network_interface_id": "eni-02ed40ce5f5ecc5ce",
            "private_ip": "10.1.96.20",
            "public_ip": "3.140.76.173",
            "subnet_id": "subnet-03832cc942a180c4b",
            "tags": {
              "Name": "gw NAT-APPGATE"
            }
          },
          "dependencies": [
            "module.appgate-network.aws_eip.bar",
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_subnet.public-subnets",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:route-table/rtb-0871c372dc87b71e1",
            "id": "rtb-0871c372dc87b71e1",
            "owner_id": "441304528954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e54586db0896779d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "value--Public-RouteTable"
            },
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_eip.bar",
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_nat_gateway.nat-appgate",
            "module.appgate-network.aws_subnet.public-subnets",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:route-table/rtb-060bb21951b73bb80",
            "id": "rtb-060bb21951b73bb80",
            "owner_id": "441304528954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027179fe573b1d455",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "value--Public-RouteTable"
            },
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.1.96.128/27",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4c3a2ccfa2d0dbc",
            "route_table_id": "rtb-0871c372dc87b71e1",
            "subnet_id": "subnet-00e22a963d88061a6"
          },
          "dependencies": [
            "module.appgate-network.aws_eip.bar",
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_nat_gateway.nat-appgate",
            "module.appgate-network.aws_route_table.private-route-table",
            "module.appgate-network.aws_subnet.private-subnets",
            "module.appgate-network.aws_subnet.public-subnets",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        },
        {
          "index_key": "10.1.96.64/27",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fae4b1f3ba3dcd3b",
            "route_table_id": "rtb-0871c372dc87b71e1",
            "subnet_id": "subnet-08c979f2ad5c7b381"
          },
          "dependencies": [
            "module.appgate-network.aws_eip.bar",
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_nat_gateway.nat-appgate",
            "module.appgate-network.aws_route_table.private-route-table",
            "module.appgate-network.aws_subnet.private-subnets",
            "module.appgate-network.aws_subnet.public-subnets",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        },
        {
          "index_key": "10.1.96.96/27",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0946b26512549c1",
            "route_table_id": "rtb-0871c372dc87b71e1",
            "subnet_id": "subnet-040565e86d28e9429"
          },
          "dependencies": [
            "module.appgate-network.aws_eip.bar",
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_nat_gateway.nat-appgate",
            "module.appgate-network.aws_route_table.private-route-table",
            "module.appgate-network.aws_subnet.private-subnets",
            "module.appgate-network.aws_subnet.public-subnets",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.1.96.0/27",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd10700893b9ad84",
            "route_table_id": "rtb-060bb21951b73bb80",
            "subnet_id": "subnet-03832cc942a180c4b"
          },
          "dependencies": [
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_route_table.public-route-table",
            "module.appgate-network.aws_subnet.public-subnets",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        },
        {
          "index_key": "10.1.96.32/27",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d87f4401214c42",
            "route_table_id": "rtb-060bb21951b73bb80",
            "subnet_id": "subnet-0a87a6c46a416845a"
          },
          "dependencies": [
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_route_table.public-route-table",
            "module.appgate-network.aws_subnet.public-subnets",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appate-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:security-group/sg-02c3a51a03d44ddbf",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02c3a51a03d44ddbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "441304528954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Alb-security-group-appgate"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appate-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:security-group/sg-035df656938b57f93",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035df656938b57f93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c3a51a03d44ddbf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-tcp-security-group",
            "name_prefix": "",
            "owner_id": "441304528954",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appate-ec2.aws_security_group.alb-securitygroup",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.1.96.128/27",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:subnet/subnet-00e22a963d88061a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.96.128/27",
            "id": "subnet-00e22a963d88061a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "441304528954",
            "tags": {
              "env": "appgate-test-alex"
            },
            "tags_all": {
              "env": "appgate-test-alex"
            },
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        },
        {
          "index_key": "10.1.96.64/27",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:subnet/subnet-08c979f2ad5c7b381",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.96.64/27",
            "id": "subnet-08c979f2ad5c7b381",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "441304528954",
            "tags": {
              "env": "appgate-test-alex"
            },
            "tags_all": {
              "env": "appgate-test-alex"
            },
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        },
        {
          "index_key": "10.1.96.96/27",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:subnet/subnet-040565e86d28e9429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.96.96/27",
            "id": "subnet-040565e86d28e9429",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "441304528954",
            "tags": {
              "env": "appgate-test-alex"
            },
            "tags_all": {
              "env": "appgate-test-alex"
            },
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.1.96.0/27",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:subnet/subnet-03832cc942a180c4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.96.0/27",
            "id": "subnet-03832cc942a180c4b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "441304528954",
            "tags": {
              "env": "appgate-test-alex"
            },
            "tags_all": {
              "env": "appgate-test-alex"
            },
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        },
        {
          "index_key": "10.1.96.32/27",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:subnet/subnet-0a87a6c46a416845a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.96.32/27",
            "id": "subnet-0a87a6c46a416845a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "441304528954",
            "tags": {
              "env": "appgate-test-alex"
            },
            "tags_all": {
              "env": "appgate-test-alex"
            },
            "vpc_id": "vpc-00a501bef5d3bf224"
          },
          "dependencies": [
            "module.appgate-network.aws_internet_gateway.igw",
            "module.appgate-network.aws_vpc.appgate-test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appgate-network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "appgate-test-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:441304528954:vpc/vpc-00a501bef5d3bf224",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.96.0/24",
            "default_network_acl_id": "acl-044eb569b2d6fa232",
            "default_route_table_id": "rtb-0baff6f0074ad6cba",
            "default_security_group_id": "sg-08897d44ba2ecffbd",
            "dhcp_options_id": "dopt-0bdb9663",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00a501bef5d3bf224",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0baff6f0074ad6cba",
            "owner_id": "441304528954",
            "tags": {
              "Name": "main--VPC"
            },
            "tags_all": {
              "Name": "main--VPC"
            }
          }
        }
      ]
    }
  ]
}